// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) change-order (a record) 1`] = `
{
  "lines": 1413,
  "sha256": "641058451f6bd68c4cf33568e78af2403e9657fb0c669d74633516b3ae9369df",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) change-order (project only) 1`] = `
{
  "lines": 1025,
  "sha256": "a305087fcf7ff3fcb82f834d71579cf415f09b38dee4280aba43c9d98aff9678",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) invoice (a record) 1`] = `
{
  "lines": 1015,
  "sha256": "517177600870f9102a76c50dbd84b8792d87a13c73ac497af900ff9e16fff52d",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) invoice (project only) 1`] = `
{
  "lines": 1025,
  "sha256": "404d13314709011efe8cc472e7ea1a1c42cd1f1e653d2b31650c00a853fb2133",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) invoice (the tutorial route, type=progress) 1`] = `
{
  "lines": 1036,
  "sha256": "54fcfa51042de08152b5ab21d83dcf405e05b1b3d250f2da8a02cbb29212e29f",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) rfi (a record) 1`] = `
{
  "lines": 863,
  "sha256": "03af2ab8f567a037b12db59a8d43f203b452e8fdb06bf1365610335bb66a622c",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) rfi (project only: the create form) 1`] = `
{
  "lines": 746,
  "sha256": "224c3e00761b21d3c8e55d059b1ef1aadf29dceb9428662fda09f54b54d80eae",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) submittal (a record) 1`] = `
{
  "lines": 807,
  "sha256": "afa170b921cd0fdeb35de2f74242616b5c1aa807531637e7c1fcf923168ff777",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) submittal (project only) 1`] = `
{
  "lines": 726,
  "sha256": "71b493a9aa2d994e66d38e35b22c730cd9894abe84b4f94e44f574ba59be30a6",
}
`;

exports[`lane G — the phone is unchanged, bar branches (golden, 390 × 844 iOS) change-order (approved credit: the bill bar says why) 1`] = `
{
  "lines": 1002,
  "sha256": "c1c1984c3c682bd461e2fe2adfb12bc7bb1292610320058543f8dc8ff7b2d5dc",
}
`;

exports[`lane G — the phone is unchanged, bar branches (golden, 390 × 844 iOS) change-order (approved, billable: the bill bar) 1`] = `
{
  "lines": 1003,
  "sha256": "535ca48f7e1441d00bdd485653dcf0a526fdb15b17d654d07adfce4cfa79632d",
}
`;

exports[`lane G — the phone is unchanged, bar branches (golden, 390 × 844 iOS) change-order (rejected: locked, no bar) 1`] = `
{
  "lines": 1008,
  "sha256": "f8994e2ef830fa55502520544eb80b59506f49a0e3cfb5d176a70909c133909c",
}
`;

exports[`lane G — the phone is unchanged, bar branches (golden, 390 × 844 iOS) invoice (sent: reminder and pay link) 1`] = `
{
  "lines": 1010,
  "sha256": "79811b94255b363fb7422f2143d4afe691ea0056281824fab0cfb49acbf72d27",
}
`;
